--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="styles.css">
 
 
-    <title>RAJBALA BHADU PORTFOLIO</title>
+    <title>OM PRAKASH PORTFOLIO</title>
 </head>
 
 <body>
