--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
     </footer>
     
     <!--===== MAIN JS =====-->
-     <script src="assets/main.js"></script>
+     <script src="main.js"></script>
 </body>
 
 </html>
